--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.30.0"
+    "@playwright/test": "^1.30.0",
+    "@types/faker": "^5.5.3",
+    "faker": "^5.5.3"
   }
 }
